mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_duplicate_field.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux run /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_duplicate_field.mux`
error: Duplicate field 'x' in class 'C'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_duplicate_field.mux:4:5
   |
 4 |     int x
   |     ^^^
